--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8080
 DEV_MODE = development
-MONGO_URL = mongodb+srv://shinu87:shinu@shinu.xj29dtg.mongodb.net/
-JWT_SECRET = ABHIMANYU123
+MONGO_URL = 
+JWT_SECRET = SHINU
